Added comment to show where the Nagios command socket is probably located. This is true on FreeBSD, at least.

--- a/koboli.ini
+++ b/koboli.ini
@@ -37,4 +37,7 @@ customfield_10102 = '{fqdn}',
 
 [NagiosCommandProcessor]
 enable = True
+# For Icinga
 command_file = /var/spool/icinga/cmd/icinga.cmd
+# For Nagios
+#command_file = /var/spool/nagios/rw/nagios.cmd
